Fix mirroring enter and exit notification for multi-mirroring

Changes:
1. Turn mirror mode off in 3+ display environment, notification shows
   "Exiting mirror mode" instead of "Mirroring with more than two displays
   is not supported.".
2. Turn mirror mode on in 3+ display environment, notification now
   includes all destination displays' names.

BUG=782512
TEST=ScreenLayoutObserverMultiMirroringTest.ExitMirrorModeBecauseAddOrRemoveDisplayMessage

Change-Id: I60e5aa08cd89a66292d23010c68106bc99925354
Reviewed-on: https://chromium-review.googlesource.com/759321
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516397}
Former-commit-id: d790a659221690cf306174693c7e02ed212d362b